# pyglider

./: .readthedocs.yaml  environment.yml  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: tests.yml
docs/: Install.md  conf.py  contributing.md  index.md
tests/: test_pyglider.py  test_seaexplorer.py  test_slocum.py  test_utils.py  utils.py
