[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyglider"
dynamic = ["version"]
description = "Glider data to netCDF translation in python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research",
]
authors = [
    { name = "Jody Klymak", email = "jklymak@gmail.com" },
]
dependencies = [
    "bitstring",
    "dask",
    "gsw",
    "netcdf4",
    "polars",
    "pooch",
    "scipy",
    "xarray",
]

[project.optional-dependencies]
code_style = [
    "black",
    "flake8<3.8.0,>=3.7.0",
    "pre-commit==1.17.0",
]
docs = [
    "autoapi",
    "myst-parser",
    "numpydoc",
    "pydata-sphinx-theme",
    "sphinx",
]
testing = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://pyglider.readthedocs.io"

[tool.hatch.version]
path = "pyglider/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pyglider",
]
